非同期処理まとめ  Fixes #3
vscode-pester-test-adapter用の設定、テスト結果ファイル追加

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,6 @@
 {
     "cSpell.language": "en",
-    "powershell.pester.useLegacyCodeLens": false
+    "powershell.pester.useLegacyCodeLens": false,
+    "testExplorer.addToEditorContextMenu": true,
+    "pesterExplorer.testFilePath": "TestExplorerResults.xml"
 }
